5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4005/executions/1616_2925.log
== TEST (2019-04-01 14:37:36) 
-- CODE:
print(5**2.2)

-- OUTPUT:
34.493241536530384
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:38:19) 
-- CODE:
print(5**2.1)

-- OUTPUT:
29.36547357720048
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:38:30) 
-- CODE:
print(5**2)

-- OUTPUT:
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:38:49) 
-- CODE:
print(5**2.2)

-- OUTPUT:
34.493241536530384
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:39:14) 
-- CODE:
print(5**2.21)

-- OUTPUT:
35.05288028194571
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:39:43) 
-- CODE:
print(5**2.201)

-- OUTPUT:
34.54880096491431
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:39:49) 
-- CODE:
print(5**2.2001)

-- OUTPUT:
34.49879345635706
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:39:54) 
-- CODE:
print(5**2.200001)

-- OUTPUT:
34.49329705130569
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:40:03) 
-- CODE:
print(5**2.20000001)

-- OUTPUT:
34.493242091677686
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:40:19) 
-- CODE:
print(5**2.12)

-- OUTPUT:
30.326089279315767
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:40:28) 
-- CODE:
print(5**2.13)

-- OUTPUT:
30.818117682609078
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:40:36) 
-- CODE:
print(5**2.14)

-- OUTPUT:
31.318129045637765
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:40:45) 
-- CODE:
print(5**2.15)

-- OUTPUT:
31.826252888660584
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:40:52) 
-- CODE:
print(5**2.16)

-- OUTPUT:
32.342620833349656
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:42:19) 
-- CODE:

print(int(5**2.16))

-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:43:14) 
-- CODE:

x= float(input("geração:"))
print(int(x**2.16))

-- OUTPUT:
115
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:43:48) 
-- CODE:

x= float(input("geração:"))
print(int(x**(2.16)))

-- OUTPUT:
115
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:44:23) 
-- CODE:

x= float(input("geração:"))
print(int(float(x**(2.16)))

-- ERROR:
File "XXXX", line 4
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:46:40) 
-- CODE:

x= float(input("geração:"))
result= ((x)**2.16)
print(int(result))

-- OUTPUT:
115
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:47:12) 
-- CODE:

x= float(input("geracao:"))
result=(x)**2.16
print(int(result))

-- OUTPUT:
115
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:47:21) 
-- CODE:

x= float(input("geracao:"))
result=(x)**2.16
print(int(result))

-- EXECUTION TIME:
0.126569
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:
115
-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:
254
-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:
578
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:48:43) 
-- CODE:

x= float(input("geracao:"))
result=(x)**2.16
print(int(result))

-- OUTPUT:
115
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:49:17) 
-- CODE:

x= float(input())
result=(x)**2.16
print(int(result))

-- OUTPUT:
115
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:49:26) 
-- CODE:

x= float(input())
result=(x)**2.16
print(int(result))

-- EXECUTION TIME:
0.177102
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:
115
-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:
254
-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:
578
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:53:41) 
-- CODE:

x= float(input())
result=(x)**2.16
result2=(x+1)**2.16
result3=(x+2)**2.16
print(int(result,result2,result3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(int(result,result2,result3))
TypeError: int() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:54:14) 
-- CODE:

x= float(input())
result=(x)**2.16
result2=(x+1)**2.16
result3=(x+2)**2.16
print(int(result result2 result3))

-- ERROR:
File "XXXX", line 6
    print(int(result result2 result3))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:54:35) 
-- CODE:

x= float(input())
result=(x)**2.16
result2=(x+1)**2.16
result3=(x+2)**2.16
print(int(result))

-- OUTPUT:
115
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
